--- a/src/main/resources/templates/recipe/ingredient/show.html
+++ b/src/main/resources/templates/recipe/ingredient/show.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Recipe Home</title>
+    <meta charset="UTF-8"/>
+    <title>View Ingredient</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"
           th:href="@{/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css}">
@@ -11,46 +12,32 @@
             th:src="@{/webjars/bootstrap/5.2.3/dist/js/bootstrap.bundle.min.js}"></script>
 </head>
 <body>
+<!--/*@thymesVar id="ingredient" type="guru.springframework.commands.IngredientCommand"*/-->
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row d-flex justify-content-center">
         <div class="col-md-6 col-md-offset-3">
             <div class="card">
                 <div class="card-header">
-                    <h1 class="card-title">My Recipes!</h1>
+                    <h1 class="card-title">Ingredient</h1>
                 </div>
                 <div class="card-body">
-                    <div class="table-responsive" th:if="${not #lists.isEmpty(recipes)}">
+
+                    <div class="table-responsive">
                         <table class="table table-hover ">
                             <thead class="thead-inverse">
                             <tr>
                                 <th>ID</th>
                                 <th>Description</th>
-                                <th>View</th>
-                                <th>Update</th>
-                                <th>Delete</th>
                             </tr>
                             </thead>
                             <tr th:remove="all">
-                                <td>123</td>
-                                <td>Tasty Goodness 1</td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Update</a></td>
-                                <td><a href="#">Delete</a></td>
-                            </tr>
-                            <tr th:remove="all">
                                 <td>12333</td>
                                 <td>Tasty Goodness 2</td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Update</a></td>
-                                <td><a href="#">Delete</a></td>
                             </tr>
-                            <tr th:each="recipe : ${recipes}">
-                                <!--/*@thymesVar id="recipe" type="wiwiel.training.domain.Recipe"*/-->
-                                <td th:text="${recipe.id}">334</td>
-                                <td th:text="${recipe.description}">Tasty Goodness 3</td>
-                                <td><a href="#" th:href="@{'recipe/' + ${recipe.id} + '/show'}">View</a></td>
-                                <td><a href="#" th:href="@{'recipe/' + ${recipe.id} + '/update'}">Update</a></td>
-                                <td><a href="#" th:href="@{'recipe/' + ${recipe.id} + '/delete'}">Delete</a></td>
+                            <tr>
+                                <td th:text="${ingredient.id}">334</td>
+                                <td th:text="${ingredient.amount} + ' ' + ${ingredient.uom.getDescription()} + ' '
+                                    + ${ingredient.description}">Tasty Goodness 3</td>
                             </tr>
                         </table>
                     </div>
