--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -17,6 +17,9 @@
     <div class="row d-flex justify-content-center">
         <div class="col-md-6 col-md-offset-3">
             <form  th:object="${recipe}" th:action="@{/recipe/}"  method="post">
+                <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger" style="margin-top: 20px">
+                    <p>Please Correct Errors Below</p>
+                </div>
                 <input type="hidden" th:field="*{id}"/>
                     <div class="card" style="margin-top: 20px">
                         <div class="card-header">
@@ -26,7 +29,15 @@
                             <div class="row">
                                 <div class="col-md-3 form-group">
                                     <label>Recipe Description:</label>
-                                    <input type="text" class="form-control" th:field="*{description}"/>
+                                    <input type="text"
+                                           class="form-control"
+                                           th:errorclass="is-invalid"
+                                           th:field="*{description}"/>
+                                    <span class="invalid-feedback" th:if="${#fields.hasErrors('description')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('description')}" th:text="${err}"/>
+                                        </ul>
+                                    </span>
                                 </div>
                             </div>
                             <div class="row">
@@ -51,11 +62,27 @@
                             <div class="row">
                                 <div class="col-md-3 form-group">
                                     <label>Prep Time:</label>
-                                    <input type="text" class="form-control" th:field="*{prepTime}"/>
+                                    <input type="text"
+                                           class="form-control"
+                                           th:errorclass="is-invalid"
+                                           th:field="*{prepTime}"/>
+                                    <span class="invalid-feedback" th:if="${#fields.hasErrors('prepTime')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('prepTime')}" th:text="${err}"/>
+                                        </ul>
+                                    </span>
                                 </div>
                                 <div class="col-md-3 form-group">
                                     <label>Cooktime:</label>
-                                    <input type="text" class="form-control" th:field="*{cookTime}"/>
+                                    <input type="text"
+                                           class="form-control"
+                                           th:errorclass="is-invalid"
+                                           th:field="*{cookTime}"/>
+                                    <span class="invalid-feedback" th:if="${#fields.hasErrors('cookTime')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('cookTime')}" th:text="${err}"/>
+                                        </ul>
+                                    </span>
                                 </div>
                                 <div class="col-md-3 form-group">
                                     <label>Difficulty:</label>
@@ -75,7 +102,15 @@
                             <div class="row">
                                 <div class="col-md-3 form-group">
                                     <label>Servings:</label>
-                                    <input type="text" class="form-control" th:field="*{servings}"/>
+                                    <input type="text"
+                                           class="form-control"
+                                           th:errorclass="is-invalid"
+                                           th:field="*{servings}"/>
+                                    <span class="invalid-feedback" th:if="${#fields.hasErrors('servings')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('servings')}" th:text="${err}"/>
+                                        </ul>
+                                    </span>
                                 </div>
                                 <div class="col-md-3 form-group">
                                     <label>Source:</label>
@@ -83,7 +118,15 @@
                                 </div>
                                 <div class="col-md-3 form-group">
                                     <label>URL:</label>
-                                    <input type="text" class="form-control" th:field="*{url}"/>
+                                    <input type="text"
+                                           class="form-control"
+                                           th:errorclass="is-invalid"
+                                           th:field="*{url}"/>
+                                    <span class="invalid-feedback" th:if="${#fields.hasErrors('url')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('url')}" th:text="${err}"/>
+                                        </ul>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -122,7 +165,17 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-12 form-group">
-                                    <textarea class="form-control" rows="3" th:field="*{directions}"></textarea></div>
+                                    <textarea
+                                            class="form-control"
+                                            th:errorclass="is-invalid"
+                                            rows="3" th:field="*{directions}">
+                                    </textarea>
+                                    <span class="invalid-feedback" th:if="${#fields.hasErrors('directions')}">
+                                    <ul>
+                                        <li th:each="err : ${#fields.errors('directions')}" th:text="${err}"/>
+                                    </ul>
+                                    </span>
+                                </div>
                             </div>
                         </div>
                     </div>
